--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,21 @@ spring.datasource.password=${LOCAL_DB_PASSWORD}
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
+
+# JWT Configuration
+jwt.secret.string=${JWT_SECRET}
+jwt.expiration.time=${JWT_EXPIRATION_TIME}
+
+# Mail Configuration
+spring.mail.username=${MAIL_USER}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+
+# Enable TLS SMTP MAIL
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+
+password.reset.link=http://localhost:3000/reset-password?code=
