Refactor account, user, transaction services; update alert templates and security config; add Docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 
 password.reset.link=http://localhost:3000/reset-password?code=
+
+#AWS S3 CONFIG
+aws.accessKeyId=${AWS_ACCESS_KEY}
+aws.secretAccessKey=${AWS_SECRETE_KEY}
+aws.region=
+aws.s3.bucketName=${AWS_BUCKET_NAME}
